<resources>
    <string name="app_name">HealthcareCompanion</string>
    <string name="userdata">userdata</string>
    <string name="trackdata">trackdata</string>
    <string name="setreminder">setreminder</string>
    <string name="setreminder2">setreminder</string>
    <string name="storedoc">storedoc</string>
    <string name="calender">calender</string>
    <string name="motivation">motivation</string>
    <string name="health_calendar">Health Calendar</string>
    <string name="medicine_tracker">Medicine Tracker</string>
    <string name="motivation_text">Motivation</string>
    <string name="my_alerts">My Alerts</string>
    <string name="personal_details">Personal Details</string>
    <string name="store_documents">Store Documents</string>
    <string name="healthcare_companion">Healthcare Companion</string>
    <string name="login">Login</string>
    <string name="loginbutton">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_click_to_register">Don\'t have account? Click to Register</string>
    <string name="user_name">User Name</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_reminder_Head">Set Reminder</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="display_last_3">Display Last 3</string>
    <string name="dosage_e_g_500mg">Dosage (e.g., 500mg)</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="time_e_g_before_breakfast">Time (e.g., Before Breakfast)</string>
    <string name="medicine_info_will_appear_here">Medicine info will appear here</string>
    <string name="choose_file">Choose File</string>
    <string name="save_document">Save Document</string>
    <string name="choose_folder">Choose Folder:</string>
    <string name="add_folder">Add Folder</string>
    <string name="select_file">Select File</string>
    <string name="upload">Upload</string>
    <string name="folder_name1">Folder Name</string>
    <string name="no_file_selected">No file selected</string>
    <string name="folder_name">Folder Name</string>
    <string name="document_list">List of stored documents</string>
    <string name="doc_thumbnail">Document thumbnail</string>
    <string name="full_image">Full-screen document</string>
    <string name="selected_date">Selected Date:</string>
    <string name="medal_image">Medal icon</string>
    <string name="reminder_status">Reminder Status\n</string>
    <string name="no_folders">No folders</string>
    <string name="no_folders_yet">No folders yet. Tap “+” to create one!</string>
    <string name="login_background">login bg\n</string>

</resources>